--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Homeschool Studies</title>
+        <link rel="icon" type="image/svg+xml" href="/costume2.svg">
+
+    </head>
+</html>
+
+
+
+
 
