--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Homeschool Studies</title>
-        <link rel="icon" type="image/svg+xml" href="/costume2.svg">
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
     </head>
 </html>
