--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <title>Homeschool Studies</title>
         <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-
     </head>
+    <body>
+        <h1>The Homeschool Archives</h1>
+    </body>
 </html>
-
-
 
 
 
