--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
     <head>
         <title>Homeschool Studies</title>
         <link rel="icon" type="image/svg+xml" href="/favicon (1).svg">
+        <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>The Homeschool Archives</h1>
+        <div class="front-page">
+            <img src="library.jpg" alt="Image failed to load">
+            <h1>The Homeschool Archives</h1>
+            <p>
+                Hi! I'm Chelsea, a homeschooled high schooler. I love reading classical literature, from Augustine to Tactitus to Darwin. On this website, I have written summaries and analyses of various books I've read. Enjoy!
+            </p>
+        </div>
     </body>
 </html>
-
 
 
