--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="front-page">
             <img src="library.jpg" alt="Image failed to load">
-            <h1>The Homeschool Archives</h1>
+            <h1 class="pinyon-script-regular">The Homeschool Archives</h1>
             <p>
                 Hi! I'm Chelsea, a homeschooled high schooler. I love reading classical literature, from Augustine to Tactitus to Darwin. On this website, I have written summaries and analyses of various books I've read. Enjoy!
             </p>
